# groundclock

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RESEARCH.md  pyproject.toml
docs/: PRIOR-WORK.md  THREATS.md
docs/kickoff/: FINDINGS-CONTEXT.md  FUTURE.md  IDEA.md  PROJECT-PLAN.md
docs/launch/: 01-tweet-thread.md  02-show-hn.md  03-linkedin.md  04-dm-targets.md  05-endorsement-request.md  README.md
docs/paper/: CLAIMS.md  SUBMISSION.md  groundclock-paper.md  groundclock-paper.tex  groundclock.bib
docs/paper/arxiv-submission/: README.md  groundclock-paper.tex  groundclock.bib
docs/spec/: v0.md
results/: README.md  mock_microbench.json  openai_gpt-4.1.json  openai_gpt-4o-mini.json  openai_gpt-5.1.json  openai_gpt-5.5.json
results/v0.2/: README.md  gemini_gemini-2.5-flash.json  gemini_gemini-2.5-pro.json  openai_gpt-4.1.json  openai_gpt-4o-mini.json  openai_gpt-5.1.json  openai_gpt-5.5.json
scripts/: build_arxiv.py  run_microbench.py  verify_spec.py
src/groundclock/: __init__.py  api.py  cli.py  clock.py  context.py  tool.py
src/groundclock/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  mock.py  openai_provider.py
src/groundclock/schemas/: get_current_time.tool.json  temporal_context.schema.json
src/nowbench/: __init__.py  grader.py  metrics.py  runner.py  tasks.py
tests/conformance/: test_nowbench.py
tests/unit/: test_clock.py  test_schema.py  test_smoke.py
